// root build.gradle

plugins {
    id 'java'
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'org.springframework.boot' version '3.5.9' apply false
}

ext {
    springBootVersion = '3.5.9'
}

allprojects {
    group = 'com.sbshop'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    // 핵심: 모든 서브모듈이 Spring Boot BOM을 통해 "버전 생략"이 가능하도록 강제
    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
        }
    }

    dependencies {
        // Lombok은 BOM이 관리하지 않는 경우가 많아서 그냥 버전 박아주는 게 제일 안전
        compileOnly "org.projectlombok:lombok:1.18.42"
        annotationProcessor "org.projectlombok:lombok:1.18.42"

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    test {
        useJUnitPlatform()
    }
}

// -----------------------------
// core (library)
// -----------------------------
project(':core') {
    dependencies {
        // 버전 생략 가능 (BOM이 관리) [web:455]
        implementation 'jakarta.persistence:jakarta.persistence-api'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

        // 굳이 직접 버전 박지 말고 BOM에 맡기는 편이 안전
        implementation 'org.hibernate.orm:hibernate-core'

        implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
        annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
        annotationProcessor "jakarta.annotation:jakarta.annotation-api"
        annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    }
}

// -----------------------------
// infrastructure (library)
// -----------------------------
project(':infrastructure') {
    dependencies {
        implementation project(':core')

        implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'

        // library 모듈에서 web starter가 꼭 필요한지 애매하지만, 네 기존 구조 유지
        implementation 'org.springframework.boot:spring-boot-starter-web'

        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.mariadb.jdbc:mariadb-java-client'

        implementation 'com.fasterxml.jackson.core:jackson-databind'
        implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.0'

        implementation 'com.opencsv:opencsv:5.9'
        implementation 'com.squareup.okhttp3:okhttp:4.12.0'

        implementation 'org.mindrot:jbcrypt:0.4'
    }
}

// -----------------------------
// api (application) - 여기만 boot plugin
// -----------------------------
project(':api') {
    apply plugin: 'org.springframework.boot'

    dependencies {
        implementation project(':core')
        implementation project(':infrastructure')

        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

        // ByteBuddy 누락 방지(너가 겪은 런타임 에러 방어)
        runtimeOnly "net.bytebuddy:byte-buddy"
        runtimeOnly "net.bytebuddy:byte-buddy-agent"
    }
}
